# iching

./: .gitignore  CMakeLists.txt  README.md  README.yo  decoded.txt  hexagram.cc  hexagram.h  hexagram.py  iching.kdev4  main.cc  main.py  mother.output  mother.txt  output.txt  readme.txt  shuffled.txt  test.txt  translator.cc  translator.h  translator.py  trigram.h  trigram.py
src/: CMakeLists.txt  hexagram.cc  hexagram.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  translator.cc  translator.h  util.cc  util.h
tests/: CMakeLists.txt  translator_tests.cc
tests/files/: yeet-shifted.iching  yeet-substituted.iching  yeet.iching
